--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 language: node_js
-sudo: true
-node_js: 
+node_js:
   - "6"
-before_install:
-  - npm install -g mocha
+
 addons:
-  chrome: "latest"
-before_script: 
-  - npm test
-after_script:
-  - npm run coverage
-cache:
-  directories:
-    - node_modules
+  firefox: "latest"
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
+before_install:
+  npm install karma-cli -g
